--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
                 <p id="question">Do you have good communication skills ?</p>
             </div>
             
-            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Agree')" value="agree">Agree</button></a>
-            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Maybe')" value="maybe">Maybe</button></a>
-            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Disagree')" value="disagree">Disagree</button></a>
+            <div class="res-bt">
+            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Agree')" value="agree"><span>Agree</span></button></a>
+            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Maybe')" value="maybe"><span>Maybe</span></button></a>
+            <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Disagree')" value="disagree"><span>Disagree</span></button></a>
+            </div>
             <div class="hidden">
                 <div id="count" class="hidden"></div>
             </div>
