--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a class="btn-solid-lg page-scroll" ><button class="bt" onclick="changeQuestion('Disagree')" value="disagree"><span>Disagree</span></button></a>
             </div>
             <div class="hidden">
-                <div id="count" class="hidden"></div>
+                <div id="count"></div>
             </div>
             <div class="hidden" id="hid">
                 <div class="hid">
