--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             </div>
             <div id="results-container"></div>
             
-            <p  id="guide" style="width:100%;" class="hidden">
-                If getting into top B-school across the globe is your dream, The Bodhi Tree is here to hold your hands <br> and guide you on the path to achieve your dreams.
-You can check out our trial lessons for MBA entrance <br> exams -<a href="https://www.tbtprep.com/triallessons"> https://www.tbtprep.com/triallessons </a>
-We also provide free study material for  these exams for <br> which you can check out our telegram group and channel –<a href="https://telegram.me/tbthacks "> https://telegram.me/tbthacks </a> <a href="https://telegram.me/tbtprep"> https://telegram.me/tbtprep </a>
+            <p  id="guide" class="hidden">
+                If getting into top B-school across the globe is your dream, The Bodhi Tree is here to hold your hands and guide you on the path to achieve your dreams. <br>
+You can check out our trial lessons for MBA entrance exams -<a href="https://www.tbtprep.com/triallessons"> https://www.tbtprep.com/triallessons </a> <br>
+We also provide free study material for  these exams for which you can check out our telegram group and channel –<a href="https://telegram.me/tbthacks "> https://telegram.me/tbthacks <br> </a> <a href="https://telegram.me/tbtprep"> https://telegram.me/tbtprep </a> <br>
 We provide scholarship worth 10,000 INR per month through Agnipariksha -<a href="https://telegram.me/agni ">https://www.tbtprep.com/agni</a>
             </p>
             <div class="hidden" id="hid">
